# mgl

./: .cproject  .cproject.old  .gitignore  .project  CMakeLists.txt  FindMGL.cmake  README.md  cdtgch.rb  index.html  params.json  show_inclusion.py
NKH/: .cproject  .gitignore  .project  cdtgch.rb
NKH/src/core/gl/: AbstractGLMem.cpp  AbstractGLMem.h  glallocator.hpp  glbinder.hpp  gldata.hpp  glformat.hpp  glfwd.hpp  glid.hpp  glmemptr.cpp  glmemptr.h  glmemptr.hpp  glptr.hpp  glrequires.cpp  glrequires.hpp  glscope.hpp  glshadercontext.hpp  gltraits.hpp  glutil.hpp  glutil.inl  glvao.hpp  glvector.hpp  glvector.inl
NKH/src/core/gl/meta/: glmetabind.hpp  gltraits.hpp
NKH/test/: GLVectorProperUse.h  ShaderStrGeneration.h
examples/: CMakeLists.txt  basic_draw.cpp
mgl/: _setup.hpp  glcontext.cpp  glcontext.h  gldata.hpp  gldraw.hpp  gldraw.inl  glexceptions.hpp  glfwd.hpp  glmhelper.hpp  glrequires.cpp  glrequires.hpp  glscope.hpp  glutil.hpp  glutil.inl  glvector.hpp  gpu_detail.hpp
mgl/_core/: gldraw.inl
mgl/_core/extension/priv/: genheader.hpp
mgl/_core/memory/: glptr.hpp  gpu_detail.hpp
mgl/_core/meta/: glbindattrib.hpp  glbindbuffer.hpp  glbinder.hpp  glinstanced.hpp  gliterdata.hpp  gltuplesize.hpp
mgl/_core/preprocessor/: glpreprocessor_control.hpp
mgl/_core/shader/: glsltranslator.hpp  glsltranslator_mat.inl  glsltranslator_vec.inl
mgl/_core/type/: glenum.hpp  glprogram.hpp  glsampler.hpp  glshader.hpp  gltags.hpp  gltexturetype.hpp  gltraits.hpp  gluniform.hpp  glvao.hpp  glvector.hpp
mgl/_debug/: _debug.cpp  _debug.hpp
mgl/common/: glscope.hpp  glstate.hpp
mgl/extension/: default_shaders.cpp  default_shaders.hpp
mgl/extension/priv/: details.hpp  genbody.hpp  genheader.hpp
mgl/memory/: glallocator.hpp  glptr.hpp  util.hpp
mgl/meta/: glbindattrib.hpp  glbindbuffer.hpp  glbinder.hpp  glinstanced.hpp  gliterdata.hpp  glmetabind.hpp  glmhelper.hpp  glsimplebuffer.hpp  gltuplesize.hpp  gluniform.hpp  gluniformhelpers.hpp  glutil.hpp
mgl/objects/: glprogram.hpp  glsampler.hpp  glshader.hpp  gltexture.hpp  gluniform.hpp  glvao.hpp  glvector.hpp
mgl/preprocessor/: glpreprocessor_base.hpp  glpreprocessor_control.hpp  glpreprocessor_types.hpp
mgl/shader/: glsltranslator.hpp  glsltranslator_pri.inl  gltranslator.hpp
mgl/type/: globj.hpp  globjsh.hpp  glprogram.hpp  glsampler.hpp  glshader.hpp  gltags.hpp  gltexture.hpp  gltexturetype.inl  gltraits.hpp  gluniform.hpp  glvao.hpp
mgl/type/priv/: details.hpp
stylesheets/: stylesheet.css
test/: DefineAttributes.h  GLVaoCommonUseCase.h  GLVectorProperUse.h  ShaderProperUse.h  ShaderStrGeneration.h
